force-app/main/default/objects/BankAccountCreated__e/BankAccountCreated__e.object-meta.xml
<CustomObject>
    <label>BankAccountCreated</label>
    <pluralLabel>BankAccountsCreated</pluralLabel>
</CustomObject>