force-app/main/default/objects/BankAccountCreated__e/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <description>Stores the 15 or 18-character Salesforce Account ID for reference or integration purposes. Do not modify manually.</description>
    <label>AccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>