force-app/main/default/objects/BankAccountCreated__e/fields/BankAccount__c.field-meta.xml
<CustomField>
    <fullName>BankAccount__c</fullName>
    <description>Complete bank account number in local format (without spaces or special characters). Length varies by country - verify with your financial institution.</description>
    <label>Bank Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>