force-app/main/default/objects/BankAccountCreated__e/fields/BankAccountHolderName__c.field-meta.xml
<CustomField>
    <fullName>BankAccountHolderName__c</fullName>
    <description>Exact legal name of the bank account holder as registered with the financial institution. Must match exactly with bank records (including special characters and spacing). Maximum 60 characters.</description>
    <label>Bank Account Holder Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>