force-app/main/default/objects/BankAccountCreated__e/fields/BankAccountName__c.field-meta.xml
<CustomField>
    <fullName>BankAccountName__c</fullName>
    <description>Official name of the bank account as registered with the financial institution. For business accounts, use exact legal entity name. For personal accounts, use &quot;FirstName LastName&quot; format.</description>
    <label>Bank Account Name</label>
    <length>60</length>
    <type>Text</type>
</CustomField>