force-app/main/default/objects/BankAccountCreated__e/fields/BankControlKey__c.field-meta.xml
<CustomField>
    <fullName>BankControlKey__c</fullName>
    <description>2-digit bank routing identifier (Bankleitzahl/BLZ in Germany) used for domestic payments. Required for German bank account transactions.</description>
    <label>Bank Control Key</label>
    <length>2</length>
    <type>Text</type>
</CustomField>