force-app/main/default/objects/BankAccountCreated__e/fields/BankCountry__c.field-meta.xml
<CustomField>
    <fullName>BankCountry__c</fullName>
    <description>Country where the bank account is registered. Can store either:
- Full country name (e.g., &quot;Germany&quot;, &quot;United States of America&quot;)
- 2-letter ISO code (e.g., &quot;DE&quot;, &quot;US&quot;)
- 3-letter ISO code (e.g., &quot;DEU&quot;, &quot;USA&quot;)
Maximum 255 characters allow for long official names.</description>
    <label>Bank Country</label>
    <length>255</length>
    <type>Text</type>
</CustomField>