force-app/main/default/objects/BankAccountCreated__e/fields/BankNumber__c.field-meta.xml
<CustomField>
    <fullName>BankNumber__c</fullName>
    <description>Bank routing number or sort code (e.g., US Routing Number: 021000021, UK Sort Code: 60-40-05). Must contain only digits (0-9). Maximum 15 characters.</description>
    <label>Bank Number</label>
    <length>15</length>
    <type>Text</type>
</CustomField>