force-app/main/default/objects/BankAccountCreated__e/fields/DirectDebitAuthorization__c.field-meta.xml
<CustomField>
    <fullName>DirectDebitAuthorization__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the customer has provided valid authorization for direct debit payments. When checked, confirms compliance with SEPA or local direct debit regulations.</description>
    <label>Direct Debit Authorization</label>
    <type>Checkbox</type>
</CustomField>