force-app/main/default/objects/BankAccountCreated__e/fields/SwiftCode__c.field-meta.xml
<CustomField>
    <fullName>SwiftCode__c</fullName>
    <description>Bank Identifier Code (BIC/SWIFT) for international transfers (e.g., DEUTDEFF for Deutsche Bank Frankfurt). Format: 8 or 11 alphanumeric characters (AAAA BB CC DDD).</description>
    <label>Swift Code</label>
    <length>11</length>
    <type>Text</type>
</CustomField>