force-app/main/default/objects/BankAccountCreated__e/fields/ValidFrom__c.field-meta.xml
<CustomField>
    <fullName>ValidFrom__c</fullName>
    <description>The starting date when this record becomes active or valid. Must be earlier than ValidTo__c if both dates are populated. Leave blank for immediate effectiveness.</description>
    <label>Valid From</label>
    <type>Date</type>
</CustomField>