force-app/main/default/objects/BankAccountCreated__e/fields/ValidTo__c.field-meta.xml
<CustomField>
    <fullName>ValidTo__c</fullName>
    <description>The expiration date when this record becomes inactive. Must be after ValidFrom__c if both dates are populated. Leave blank for indefinite validity.</description>
    <label>Valid To</label>
    <type>Date</type>
</CustomField>